; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/i4l/extr_isdn_x25iface.c_isdn_x25iface_proto_new.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/i4l/extr_isdn_x25iface.c_isdn_x25iface_proto_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.concap_proto = type { %struct.TYPE_3__*, i64, i32*, i32*, i32*, i32 }
%struct.TYPE_3__ = type { %struct.concap_proto, i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"isdn_x25iface_proto_new\0A\00", align 1
@ISDN_X25IFACE_MAGIC = common dso_local global i32 0, align 4
@WAN_UNCONFIGURED = common dso_local global i32 0, align 4
@ix25_pops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.concap_proto* @isdn_x25iface_proto_new() #0 {
  %1 = alloca %struct.concap_proto*, align 8
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.TYPE_3__* @kmalloc(i32 56, i32 %3)
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %2, align 8
  %5 = call i32 @IX25DEBUG(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = icmp ne %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %37

8:                                                ; preds = %0
  %9 = load i32, i32* @ISDN_X25IFACE_MAGIC, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @WAN_UNCONFIGURED, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.concap_proto, %struct.concap_proto* %16, i32 0, i32 5
  %18 = call i32 @spin_lock_init(i32* %17)
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.concap_proto, %struct.concap_proto* %20, i32 0, i32 4
  store i32* null, i32** %21, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.concap_proto, %struct.concap_proto* %23, i32 0, i32 3
  store i32* null, i32** %24, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.concap_proto, %struct.concap_proto* %26, i32 0, i32 2
  store i32* @ix25_pops, i32** %27, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.concap_proto, %struct.concap_proto* %29, i32 0, i32 1
  store i64 0, i64* %30, align 8
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.concap_proto, %struct.concap_proto* %33, i32 0, i32 0
  store %struct.TYPE_3__* %31, %struct.TYPE_3__** %34, align 8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  store %struct.concap_proto* %36, %struct.concap_proto** %1, align 8
  br label %38

37:                                               ; preds = %0
  store %struct.concap_proto* null, %struct.concap_proto** %1, align 8
  br label %38

38:                                               ; preds = %37, %8
  %39 = load %struct.concap_proto*, %struct.concap_proto** %1, align 8
  ret %struct.concap_proto* %39
}

declare dso_local %struct.TYPE_3__* @kmalloc(i32, i32) #1

declare dso_local i32 @IX25DEBUG(i8*) #1

declare dso_local i32 @spin_lock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
